--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   http: ^1.6.0
   url_launcher: ^6.3.2
   cached_network_image: ^3.4.1
+  shared_preferences: ^2.2.2
 
 dev_dependencies:
   flutter_test:
